welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: type blue
setCouleurBrosse(c:blue);
                   ^