welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
setCouleurBrosse(c:blue);
gauche();
avance();
avance();
avance();
avance();
gauche();
avance();
avance();
avance();
avance();
gauche();
avance();
avance();
avance();
avance();
gauche();
avance();
avance();
gauche();
avance();
droite();
